--- a/Jazzima1/Views/Albums/Details.cshtml
+++ b/Jazzima1/Views/Albums/Details.cshtml
@@ -43,6 +43,8 @@
             Comments:
         </dt>
         <div>
+            @if (Model.Comments.Count() > 0)
+            {
             @foreach (var item in Model.Comments)
             {
                 @if (item.ApplicationUser.FirstName != null)
@@ -52,6 +54,7 @@
                 <dd class="col-sm-10">
                     @Html.DisplayFor(modelItem => item.Content)
                 </dd>
+            }
             }
         </div>
       </div>
@@ -79,19 +82,19 @@
                     @Html.DisplayFor(modelItem => item)
 
                 </dd>
+                <a asp-action="Edit" asp-route-id="@item.Id" asp-controller="Comments">
+                    <input class="btn btn-success" type="submit" value="Edit a Comment" />
+                </a>
 
             }
 
             </d1>
 
-    </div>
+</div>
 
 <div>
     <a asp-action="Create" asp-route-id="@Model.Id" asp-controller="Comments">
         <input class="btn btn-success" type="submit" value="Add a Comment" />
-    </a>
-    <a asp-action="Edit" asp-route-id="@Model.Id" asp-controller="Comments">
-        <input class="btn btn-success" type="submit" value="Edit a Comment" />
     </a>
     <a asp-action="Index">Back to List</a>
 </div>
