--- a/Jazzima1/Views/Home/Index.cshtml
+++ b/Jazzima1/Views/Home/Index.cshtml
@@ -148,9 +148,10 @@
                             <a asp-action="Details" asp-route-id="@album.Id" asp-controller="Home">
                                 <input class="btn btn-outline-dark" type="submit" value="Details" />
                             </a>
-                            <a asp-action="Create" asp-route-id="@album.Id" asp-controller="SavedAlbums">
+                            <form asp-action="Create" asp-route-id="@album.Id" asp-controller="SavedAlbums">
+                                <input hidden asp-for="@album.Id"/>
                                 <input class="btn btn-dark" type="submit" value="Add to Wishlist" />
-                            </a>
+                            </form>
                         </div>
                     </div>
                 </div>
