--- a/Jazzima1/Views/Albums/Details.cshtml
+++ b/Jazzima1/Views/Albums/Details.cshtml
@@ -45,16 +45,19 @@
         <div>
             @if (Model.Comments.Count() > 0)
             {
-            @foreach (var item in Model.Comments)
-            {
-                @if (item.ApplicationUser.FirstName != null)
+                @foreach (var item in Model.Comments)
                 {
-                    @item.ApplicationUser.FirstName
+                    @if (item.ApplicationUser.FirstName != null)
+                    {
+                        @item.ApplicationUser.FirstName
+                    }
+                    <a asp-action="Edit" asp-route-id="@item.Id" asp-controller="Comments">
+                        <input class="btn btn-success" type="submit" value="Edit a Comment" />
+                    </a>
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(modelItem => item.Content)
+                    </dd>
                 }
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(modelItem => item.Content)
-                </dd>
-            }
             }
         </div>
       </div>
@@ -63,9 +66,9 @@
 
 <div>
 
-        <h4>Comments</h4>
+        @*<h4>Comments</h4>*@
 
-        <dl class="row">
+        @*<dl class="row">
 
             @foreach (var item in Model.Comments)
 
@@ -88,7 +91,7 @@
 
             }
 
-            </d1>
+            </d1>*@
 
 </div>
 
