--- a/Jazzima1/Views/Albums/Index.cshtml
+++ b/Jazzima1/Views/Albums/Index.cshtml
@@ -4,12 +4,21 @@
     ViewData["Title"] = "Index";
 }
 
-<div class="text-center"
+@*<div class="text-center"
 <form asp-action="Index" asp-controller="Albums" method="get">
     <label>Search by Musician: </label>
     <input name="searchQuery" type="text" />
     <input class="btn btn-success" type="submit" value="Search" />
 </form>
+</div>*@
+
+<div class="text-center">
+    @*<h1 class="display-4"></h1>*@
+    <form asp-action="Index" asp-controller="Albums" method="get">
+        <label>Search by Musician: </label>
+        <input name="searchQuery" type="text" />
+        <input class="btn btn-success" type="submit" value="Search" />
+    </form>
 </div>
 
 <div class="savedalbums">
