--- a/Jazzima1/Views/Home/Index.cshtml
+++ b/Jazzima1/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="text-center">
 
-    <h1 class="display-4">Jazzima</h1>
+    <h1 class="display-4"><img src="~/images/jazzimablack.png" style="width: 200px; height: 80px;" /></h1>
 
 
 </div>
