--- a/Jazzima1/wwwroot/css/site.css
+++ b/Jazzima1/wwwroot/css/site.css
@@ -51,13 +51,10 @@ a {
     line-height: 60px; /* Vertically center the text there */
 }
 
-.home-form-control {
-    /*width: 100px;*/
-}
 
-
-.submit-form-control {
-    flexbox: center;
+.container-details {
+    display: flex;
+    justify-content: flex-end;
 }
 
 
