changed one button color

--- a/Jazzima1/Views/Albums/Details.cshtml
+++ b/Jazzima1/Views/Albums/Details.cshtml
@@ -27,7 +27,7 @@
                 <img class="img-thumbnail" style="max-width: 300px;" src="@Model.Image" alt="" />
                 <div>
                     <a asp-action="Create" asp-route-id="@Model.Id" asp-controller="Comments">
-                        <input class="btn btn-success" type="submit" value="Add a Comment" />
+                        <input class="btn btn-outline-dark" type="submit" value="Add a Comment" />
                     </a>
                     <div>
                         <dt class="col-sm-2">
