--- a/Jazzima1/Views/Comments/Edit.cshtml
+++ b/Jazzima1/Views/Comments/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@*@model Jazzima1.Models.Comments
+﻿@model Jazzima1.Models.Comments
 
 @{
     ViewData["Title"] = "Edit";
@@ -9,21 +9,16 @@
 <h4>Comments</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="AlbumId" />
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
+                <input asp-for="Content" class="form-control form-control-lg" />
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
-
-            <div class="form-group">
-                    <label asp-for="AlbumId" class="control-label"></label>
-                    <input asp-for="AlbumId" class="form-control" />
-                    <span asp-validation-for="AlbumId" class="text-danger"></span>
-                </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -31,38 +26,7 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+@**<div>
+    <a asp-controller="Albums" asp-action="Details"> Back to List</a>
 </div>*@
-
-@model Jazzima1.Models.Comments
-
-@{
-    ViewData["Title"] = "Edit";
-}
-
-<h1>Edit</h1>
-
-<h4>Comments</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
-                <span asp-validation-for="Content" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
