--- a/Jazzima1/Views/SavedAlbums/Delete.cshtml
+++ b/Jazzima1/Views/SavedAlbums/Delete.cshtml
@@ -6,9 +6,12 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>
+    Are you sure you want to delete @Html.DisplayFor(model => model.Album.Title)?
+    
+</h3>
 <div>
-    <h4>SavedAlbum</h4>
+    @*<h4>SavedAlbum</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -23,11 +26,11 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Album.Id)
         </dd class>
-    </dl>
+    </dl>*@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-controller="Albums" asp-action="Index">Back to List</a>
     </form>
 </div>
