--- a/Jazzima1/Views/Comments/Edit.cshtml
+++ b/Jazzima1/Views/Comments/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Edit</h1>
 
-<h4>Comments</h4>
+@*<h4>Comments</h4>
 <hr />
 <div class="row">
     <div class="col-md-6">
@@ -24,9 +24,30 @@
             </div>
         </form>
     </div>
-</div>
-
-@**<div>
-    <a asp-controller="Albums" asp-action="Details"> Back to List</a>
 </div>*@
 
+@**<div>
+        <a asp-controller="Albums" asp-action="Details"> Back to List</a>
+    </div>*@
+<h4>Comments</h4>
+<hr />
+<div class="row">
+    <div class="col">
+        <form asp-action="Edit">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="AlbumId" />
+            <div class="form-group">
+                <label asp-for="Content" class="control-label"></label>
+                <input asp-for="Content" class="form-control form-control-lg" />
+                <span asp-validation-for="Content" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
+            @*<form asp-action="Details" asp-route-id="@item.Id" asp-controller="Albums">
+            <input class="btn btn-success" type="submit" value="Details" />
+        </form>*@
+        </form>
+    </div>
+</div>
